examples/test/testpolicy13546.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13546
  namespace: namespace274
spec:
  podSelector:
    matchLabels:
      key31: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value42
          key46: value30
      podSelector:
        matchLabels:
          key26: value36
          key21: value28
